
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.8.3\...v0.8.4[0.8.4] - 2023-11-29

=== Changed

* Update dependencies

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/252[#252])

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-10-03

=== Removed

* Remove version from the book ({pull-request-url}/240[#240])

== {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2023-09-30

=== Added

* Add the usage to the book ({pull-request-url}/227[#227])

== {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2023-09-12

=== Changed

* Rewrite the book with Antora ({pull-request-url}/224[#224])

== {compare-url}/v0.7.5\...v0.8.0[0.8.0] - 2023-09-07

=== Changed

* Change `SPDX-FileCopyrightText` of each file to include only the year of
  initial publication ({pull-request-url}/192[#192])
* Remove unnecessary newline after period ({pull-request-url}/193[#193])
* Bump MSRV to 1.70.0 ({pull-request-url}/213[#213])

== {compare-url}/v0.7.4\...v0.7.5[0.7.5] - 2023-08-09

=== Changed

* Update documentation ({pull-request-url}/179[#179])
* Use LZMA instead of LZMA2 in 7z format for pre-built binary
  ({pull-request-url}/181[#181])

== {compare-url}/v0.7.3\...v0.7.4[0.7.4] - 2023-08-03

=== Changed

* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/166[#166])
* Make this project REUSE compliant ({pull-request-url}/167[#167])

== {compare-url}/v0.7.2\...v0.7.3[0.7.3] - 2023-07-21

=== Added

* Add `homepage` field to `Cargo.toml`

== {compare-url}/v0.7.1\...v0.7.2[0.7.2] - 2023-07-18

=== Changed

* Change license for `demo.gif`
